# simple-compress

./: README.md  pyproject.toml
src/compress/: bwt.py  rle.py  suffix_array.py
tests/: test_bwt.py  test_rle.py  test_suffix_array.py
